# StanleyCraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  StanleyCraft.c  Untitled Diagram.drawio  vcpkg.json
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/test/gtc/: .gtc_color_space 2.cpp.icloud  .gtc_constants 2.cpp.icloud  .gtc_epsilon 2.cpp.icloud  .gtc_integer 2.cpp.icloud  .gtc_matrix_access 2.cpp.icloud  .gtc_matrix_integer 2.cpp.icloud  .gtc_matrix_inverse 2.cpp.icloud  .gtc_matrix_transform 2.cpp.icloud  .gtc_noise 2.cpp.icloud  .gtc_packing 2.cpp.icloud  .gtc_quaternion 2.cpp.icloud  .gtc_random 2.cpp.icloud  .gtc_reciprocal 2.cpp.icloud  .gtc_round 2.cpp.icloud  .gtc_type_aligned 2.cpp.icloud  .gtc_type_precision 2.cpp.icloud  .gtc_type_ptr 2.cpp.icloud  .gtc_ulp 2.cpp.icloud  .gtc_user_defined_types 2.cpp.icloud  .gtc_vec1 2.cpp.icloud
lib/glm/test/gtx/: .CMakeLists 2.txt.icloud  .gtx 2.cpp.icloud  .gtx_associated_min_max 2.cpp.icloud  .gtx_closest_point 2.cpp.icloud  .gtx_color_encoding 2.cpp.icloud  .gtx_color_space 2.cpp.icloud  (+60 more)
shaders/: default.fragment  default.vertex
shaders/block/: block.fs
shaders/default/: default.fs  default.vs
src/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.h  Entity.cpp  Entity.h  EventHandler.cpp  EventHandler.h  Game.c  Game.cpp  Game.h  GameObject.h  InputHandler.cpp  InputHandler.h  Libs.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Player.h  Renderer.cpp  Renderer.h  Shader.c  Shader.cpp  Shader.h  StanleyCraft.c  StanleyCraft.cpp  Texture.h  Window.cpp  Window.h  dependencies.h  main.cpp
(+7 files in other folders)
